fix: layout shift in safari due to margin-top

--- a/styles/WelcomePage.module.scss
+++ b/styles/WelcomePage.module.scss
@@ -30,8 +30,11 @@
   display: grid;
   grid-template-rows: 1fr auto;
   position: relative;
-  margin-top: 2.5em;
   padding-inline: 2em;
+
+  @media (max-width: 740px) {
+    margin-top: 2.5em;
+  }
 }
 
 .hero {
@@ -39,6 +42,10 @@
   z-index: 1;
   margin-bottom: 5em;
   padding-inline: 5em;
+
+  @media (max-width: 740px) {
+    margin-bottom: 1em;
+  }
 
   .textLogo {
     animation: text-appearence 0.5s ease-out 0.5s both;
@@ -100,6 +107,7 @@
 
   @media (max-width: 740px) {
     display: flex;
+    gap: 1em;
   }
 
   .stores {
